# pc-audio-mixer

./: .gitignore  CLAUDE.md  Cargo.toml  debug_usb.py  pyproject.toml  test_pico_connection.py
.github/workflows/: README.md  build-release.yml  build.yml  ci.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: project-context.md
firmware/: Cargo.toml
firmware/src/: main.rs  main_mcp3008.rs
gui/: biome.json  package.json  pnpm-lock.yaml  vite.config.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: audio.rs  config.rs  lib.rs  serial.rs  types.rs
gui/src-tauri/src/audio/: macos_impl.rs  stub_impl.rs  windows_impl.rs
gui/src/lib/components/: AppSelector.svelte  ApplicationList.svelte  Fader.svelte  Mixer.svelte  StatusBar.svelte
gui/src/lib/stores/: mixer.ts
gui/src/routes/: +page.svelte
mixer-gui/: pnpm-lock.yaml
mixer-gui/src-tauri/: Cargo.toml
mixer-gui/src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  serial.rs  types.rs
mixer-gui/src-tauri/src/audio/: macos_impl.rs  stub_impl.rs  windows_impl.rs
mixer-gui/src/lib/components/: StatusBar.svelte
src/: main.rs  main_mcp3008.rs
